name: Day14
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends:
stability: experimental
homepage:
package-url:
bug-reports:
synopsis:
description:
category:
author:
tested-with:
data-files: test_input.txt
data-dir: ""
extra-source-files: input.txt
extra-tmp-files:
extra-doc-files:
Executable Day_14.hs
  main-is: Day_14.hs
  buildable: True
  build-tools:
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs:
  other-modules:
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
